[package]
name = "cm_contract_sdk"
version = "2.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.37"
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[lib]
crate-type = ["rlib"]
